Update markers in pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ testpaths = tests
 markers =
     smoke: All critical smoke tests
     ui: All User Interface tests
+    unit: All critical unit tests
